--- a/index.html
+++ b/index.html
@@ -83,25 +83,22 @@
             <h2 class="section__title section__title--work">Meus Projetos</h2>
             <p class="section__subtitle section__subtitle--work">Alguns exemplos dos meus projetos</p>
             
-            <div class="portfolio">
+ <div class="portfolio">
                 
                 <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="assets/Circuitin.jpeg" alt="" class="portfolio__img" height="330px">
+                    <img src="https://imgur.com/HaU0jAy" alt="" class="portfolio__img" height="330px">
                 </a>
                 <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="assets/Certificado.png" alt="" class="portfolio__img" height="330px">
-                </a>
-                <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="assets/Certificado2.png" alt="" class="portfolio__img" height="330px">
+                    <img src="https://imgur.com/QdLalHq" alt="" class="portfolio__img" height="330px">
                 </a> 
                 <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="assets/Screenshot_2.png" alt="" class="portfolio__img" height="330px" width="100%">
+                    <img src="https://imgur.com/2BbzN3P" alt="" class="portfolio__img" height="330px" width="100%">
                 </a>
                 <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="assets/Screenshot_3.png" alt="" class="portfolio__img" height="330px" width="100%">
+                    <img src="https://imgur.com/rNrdSyz" alt="" class="portfolio__img" height="330px" width="100%">
                 </a> 
                 <a href="portfolio-item.html" class="portfolio__item">
-                    <img src="assets/Screenshot_5.png" alt="" class="portfolio__img" height="330px" width="100%">
+                    <img src="https://imgur.com/a17DHk5" alt="" class="portfolio__img" height="330px" width="100%">
                 </a>  
             </div>
         </section>
