--- a/index.html
+++ b/index.html
@@ -88,35 +88,35 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
                     <a href="https://danzokka.github.io/assets/Certificado.png" class="portfolio__item">
-                        <img src="assets/Certificado.png" style="width:100%">
+                        <img src="assets/Certificado.png" class="center">
                     </a>
                     <div class="text">Fundamentos: dados, dados, em todos os lugares</div>
                 </div>
               
                 <div class="mySlides fade">
                     <a href="https://danzokka.github.io/assets/Certificado2.png" class="portfolio__item">
-                        <img src="assets/Certificado2.png" style="width:100%">
+                        <img src="assets/Certificado2.png" class="center">
                     </a>
                     <div class="text">Fazer perguntas para tomar decisões com base em dados</div>
                 </div>
               
                 <div class="mySlides fade">
                     <a href="https://danzokka.github.io/assets/Certificado3.png" class="portfolio__item">
-                        <img src="assets/Certificado3.png" style="width:100%">
+                        <img src="assets/Certificado3.png" class="center">
                     </a>
                     <div class="text">Preparar os Dados para Exploração</div>
                 </div>
 
                 <div class="mySlides fade">
                     <a href="https://danzokka.github.io/assets/Certificado4.png" class="portfolio__item">
-                        <img src="assets/Certificado4.png" style="width:100%">
+                        <img src="assets/Certificado4.png" class="center">
                     </a>
                     <div class="text">Processar os dados para limpá-los</div>
                 </div>
 
                 <div class="mySlides fade">
                     <a href="https://danzokka.github.io/assets/Certificado5.png" class="portfolio__item">
-                        <img src="assets/Certificado5.png" style="width:100%">
+                        <img src="assets/Certificado5.png" class="center">
                     </a>
                     <div class="text">Analisar os dados para responder às perguntas</div>
                 </div>
