--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Port</title>
+    <title>Danzokka Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/01d22bbb46.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="assets/logo.png">
 </head>
 <body>
 <div id="header">
