--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                         </li>
                         <li><span>Java e Orientação a Objetos</span><br>
                             <a class = "certificado" href="https://cursos.alura.com.br/degree/certificate/2367e247-5669-4602-9332-344d656af301">
-                            - Formação Java e Orientação a Objetos
+                                - Formação Java e Orientação a Objetos
                             </a>
                         </li>
                         <li><span>Arquitetura e Design de Projetos Java</span><br>
                             <a class = "certificado" href="https://cursos.alura.com.br/degree/certificate/68fc3198-a7c2-40cc-8516-73cc8a4cbd0c">
-                            - Formação Java e Orientação a Objetos
+                                - Formação Arquitetura e Design de Projetos Java
                             </a>
                         </li>
                     </ul>
