--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="assets/teste.png" class="logo" draggable="false">
+            <img src="assets/danzokka-logo.png" class="logo" draggable="false">
             <ul id = "sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">Sobre Mim</a></li>
@@ -125,7 +125,7 @@
         <h1 class="sub-title">Meus Projetos</h1>
         <div class="work-list">
             <div class="work">
-                <img src="assets/Novo Projeto.png" draggable="false">
+                <img src="assets/flappybird-background.png" draggable="false">
                 <div class="layer">
                     <h3>Flappy Bird</h3>
                     <p>Esse projeto foi uma ótima oportunidade para eu aprimorar minhas habilidades em JavaScript na web e entender como funciona a lógica por trás da produção de jogos. Durante o processo, aprendi como movimentar o personagem principal, criar caixas de colisão para as diferentes interações no jogo e deixá-lo em um loop contínuo, permitindo ao jogador jogar indefinidamente.</p>
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="assets/fallouthacks.png" draggable="false">
+                <img src="assets/fallouthackingminigame-background.png" draggable="false">
                 <div class="layer">
                     <h3>Hacking Game Fallout</h3>
                     <p>Este projeto foi feito em 2022 e teve como inspiração o minigame de hackear do jogo Fallout. Utilizei a linguagem de programação Python para desenvolvê-lo, visando aprimorar minhas habilidades na linguagem e prestar uma homenagem a um dos meus jogos favoritos. Futuramente, pretendo portar o projeto para a web e utilizá-lo como uma oportunidade para aprender mais sobre o py-script, que é um modelo para usar o Python em projetos web com animações em CSS.</p>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="assets/tmnc.png" draggable="false">
+                <img src="assets/laptop-backgroung.png" draggable="false">
                 <div class="layer">
                     <h3>Faculdade</h3>
                     <p>Neste repositório, disponibilizei grande parte dos projetos que desenvolvi durante minha formação acadêmica, utilizando principalmente linguagens como C e Java. São projetos que mostram minha evolução no mundo da programação ao longo dos anos e que me ajudaram bastante para a minha evolução como um desenvolvedor.</p>
@@ -149,7 +149,6 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">Veja Mais</a>
     </div>
 </div>
 <!---Fotos-->
@@ -170,7 +169,7 @@
                     <a href="https://www.linkedin.com/in/rafael-dantas-134621243/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://discordapp.com/users/264161929679994882/"><i class="fab fa-discord"></i></a>
                 </div>
-                <a href="assets/my-cv.pdf" download class="btn btn2" id="cv">Download Curriculo</a>
+                <a href="assets/Meu-Curriculo.pdf" download class="btn btn2" id="cv">Download Curriculo</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
