--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <p class="tab-links" onclick="opentab('experience')">Experiência</p>
                     <p class="tab-links" onclick="opentab('education')">Formação e Competências</p>
                 </div>
-                <div class="tab-contents active-tab" id="skills">
+                <div class="tab-contents active-tab slide" id="skills">
                     <ul>
                             <li><span>Java</span><br>Conhecimentos nas principais bibliotecas do Java, bem como em arquitetura e design de projetos Java, seguindo os padrões 'GoF' ou 'Gang of Four'. Além disso, possuo ampla experiência na implementação de testes automatizados usando as ferramentas JUnit e Selenium.</li>
                             <li><span>Python</span><br>O Python foi a primeira grande linguagem de programação que aprendi por conta própria, e ela me deu a habilidade de criar algoritmos capazes de automatizar projetos e até mesmo replicar um dos meus minigames favoritos da série de jogos 'Fallout'.</li>
@@ -60,12 +60,12 @@
                         </li>
                     </ul>
                 </div>
-                <div class="tab-contents" id="experience">
+                <div class="tab-contents slide" id="experience">
                     <ul>
                         <li><span>Não Possuo</span><br>No entanto, busco uma vaga de um estágio na área de TI</li>
                     </ul>
                 </div>
-                <div class="tab-contents" id="education">
+                <div class="tab-contents slide" id="education">
                     <ul>
                         <li><span>Engenharia da Computação</span><br>
                             <a class="certificado" href="assets/historico.pdf">
@@ -121,7 +121,7 @@
 
 <!------Portfolio------>
 <div id="portfolio">
-    <div class="container">
+    <div class="container projetos">
         <h1 class="sub-title">Meus Projetos</h1>
         <div class="work-list">
             <div class="work">
@@ -147,7 +147,7 @@
                     <p>Neste repositório, disponibilizei grande parte dos projetos que desenvolvi durante minha formação acadêmica, utilizando principalmente linguagens como C e Java. São projetos que mostram minha evolução no mundo da programação ao longo dos anos e que me ajudaram bastante para a minha evolução como um desenvolvedor.</p>
                     <a href="https://github.com/Danzokka/Faculdade"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-            </div>
+            </div>               
         </div>
     </div>
 </div>
