--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
                                 - Formação Arquitetura e Design de Projetos Java
                             </a>
                         </li>
+                        <li><span>Começando em Cloud Computing</span><br>
+                            <a class = "certificado" href="https://cursos.alura.com.br/degree/certificate/3a0a4c0c-26c0-4f82-8803-6a5a2e332ba1">
+                                - Começando em Cloud Computing
+                            </a>
+                        </li>
+                        <li><span>A Partir do Zero: HTML e CSS Para Projetos Web</span><br>
+                            <a class = "certificado" href="https://cursos.alura.com.br/degree/certificate/dbecc7c0-03ec-4fd1-bf44-2d0b2c9facee">
+                                - A Partir do Zero: HTML e CSS Para Projetos Web
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
